Support for IntelliJ themes